# VIA-typescript

./: .gitignore  AGENTS.md  ARCHITECTURE_UPGRADE_BLUEPRINT.md  Dockerfile  README.md  bunfig.toml  docker-compose.yml  drizzle.config.ts  package.json  task.md  tsconfig.json
.kilocode/skills/rust-engineer/: SKILL.md
docs/: PLAN.md
docs/archive/: BUN_IMPLEMENTATION_PLAN.md  tier1-rust.md
docs/plans/: DETERMINISTIC_SIM_ARCHITECTURE.md  TIER1_IMPLEMENTATION.md  TIER1_SOTA_HARDENING.md  TIER2_SOTA_HARDENING.md  via-core.md
plans/: via-sim-merge-plan.md
scripts/: e2e-eval.ps1  e2e-eval.py
src/: main.ts  rust-bridge.ts  types.ts
src/algorithms/: cusum.ts  double-ewma.ts  ewma.ts  hyperloglog.ts  index.ts  robust-z-score.ts
src/api/routes/: analysis.ts  control.ts  evaluation.ts  health.ts  ingest.ts  schema.ts  simulation.ts  stream.ts
src/config/: settings.ts
src/core/: anomaly-profile.ts  index.ts  rust-bridge.ts  state-manager.ts
src/db/: registry.ts  schema.ts
src/modules/tier2/adapters/: registry-repositories.ts
src/modules/tier2/contracts/: tier1-policy.ts  tier1-signal.ts
src/modules/tier2/domain/: incident-decision.ts
src/modules/tier2/ports/: repositories.ts
src/queue/: queue.ts  worker.ts
src/services/: control-service.ts  evaluation-service.ts  forensic-analysis-service.ts  incident-service.ts  index.ts  ingestion-helpers.ts  ingestion-service.ts  policy-compiler-service.test.ts  policy-compiler-service.ts  promotion-service.ts  qdrant-service.ts  schema-service.ts  tier1-engine.ts  tier1-sync-service.ts  tier2-queue-service.ts  tier2-service.ts
src/simulation/: scenario.ts  simulator.ts
src/simulation/scenarios/: credential-stuffing.ts
src/utils/: logger.ts
tests/tier2/contracts/: tier1-signal.test.ts
tests/tier2/domain/: incident-decision.test.ts
tests/tier2/services/: control-service.test.ts  incident-service.test.ts  policy-compiler-service.test.ts  tier2-service.test.ts
via-core/: BENCHMARK.md  BENCHMARK_v2.md  Cargo.toml  INTEGRATION_FIX.md  README.md  feedback.md
via-core/crates/via-bench/: Cargo.toml
via-core/crates/via-bench/examples/: benchmark.rs
via-core/crates/via-bench/src/: lib.rs  main.rs  pipeline.rs  stress_test.rs
via-core/crates/via-core/: Cargo.toml  README.md
via-core/crates/via-core/src/: checkpoint.rs  engine.rs  feedback.rs  forwarder.rs  gatekeeper.rs  lib.rs  policy.rs  registry.rs  signal.rs
via-core/crates/via-core/src/algo/: adaptive_ensemble.rs  adaptive_threshold.rs  behavioral_fingerprint.rs  cms.rs  drift_detector.rs  enhanced_cusum.rs  histogram.rs  hll.rs  holtwinters.rs  mod.rs  multi_scale.rs  rrcf.rs  spectral_residual.rs
via-core/crates/via-sim/: Cargo.toml
via-core/crates/via-sim/src/: api.rs  core.rs  engine.rs  generator.rs  lib.rs  main.rs  stress.rs
via-core/crates/via-sim/src/scenarios/: distributed.rs  mod.rs  performance.rs  security.rs  traffic.rs
via-core/crates/via-sim/src/simulation/: live_engine.rs
via-core/crates/via-sim/src/simulation/scenarios/: performance.rs  security.rs  traffic.rs
via-core/examples/: benchmark.rs
via-core/src/: engine.rs  engine_v2.rs  lib.rs  tier2_ffi.rs
via-core/src/algo/: adaptive_ensemble.rs  cusum.rs  drift_detector.rs  ewma.rs  histogram.rs  hll.rs  holtwinters.rs  mod.rs  multi_scale.rs  spectral_residual.rs
via-core/src/simulation/: live_engine.rs  live_types.rs  mod.rs  types.rs
via-core/src/simulation/scenarios/: mod.rs  performance.rs  security.rs  traffic.rs
via-core/tests/: regression.rs
