[package]
name = "via-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
