[package]
name = "via-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gatekeeper"
path = "src/bin/gatekeeper.rs"

[[bin]]
name = "load_gen"
path = "src/bin/load_gen.rs"

[dependencies]
libc = "0.2"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "const_xxh3"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = "0.9"
rand_distr = "0.5.1"
uuid = { version = "1.20.0", features = ["v4", "fast-rng"] }
chrono = { version = "0.4.43", features = ["serde"] }

# Tier-1 Engine Dependencies
tokio = { version = "1.49.0", features = ["full"] }
axum = "0.8.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
crossbeam-channel = "0.5.15"
once_cell = "1.21.3"
simd-json = "0.17.0"
prometheus = { version = "0.14.0", features = ["process"] }
tokio-util = "0.7.13"
bytes = "1.11.0"
async-trait = "0.1.86"
reqwest = { version = "0.13.1", features = ["json", "rustls"] }
fastrand = "2.3.0"