[workspace]
members = [
    "crates/via-core",
    "crates/via-sim",
    "crates/via-bench",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["VIA Team"]
license = "MIT"

[workspace.dependencies]
xxhash-rust = { version = "0.8.15", features = ["xxh3", "const_xxh3"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = "0.9"
rand_distr = "0.5.1"
uuid = { version = "1.20.0", features = ["v4", "fast-rng"] }
chrono = { version = "0.4.43", features = ["serde"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
crossbeam-channel = "0.5.15"
once_cell = "1.21.3"
fastrand = "2.3.0"

# Internal crates
via-core = { path = "crates/via-core" }
