[package]
name = "via-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "via-bench"
path = "src/main.rs"

[dependencies]
via-core = { workspace = true }
via-sim = { path = "../via-sim" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
