[package]
name = "via-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "via_sim"
path = "src/lib.rs"

[[bin]]
name = "via-sim"
path = "src/main.rs"

[[bin]]
name = "via-stress"
path = "src/stress.rs"

[dependencies]
via-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
xxhash-rust = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
fastrand = { workspace = true }
